2010-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/sha1.bench: use only SHA1 algorithm that works across
	versions.  The variant didn't add any extra value.  Also strip out
	the unused code that wasn't relevant to the benchmark.

2010-11-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* runbench.tcl: add -repeat and -collate options that allow for
	multiple runs to be accumulated and collate to be min, max or avg
	value of runs.

	* tcl/expr.bench (UpdStrOfDbl): improve UpdStrOfDbl benchmarks

	* runbench.tcl (collectData): warn if autoscale is on that the
	total elapsed time gets skewed

	* libbench.tcl: spit out evalstats info if available

2010-11-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/expr.bench (expr-UpdateStringOfDouble): add TIP#132
	UpdateStringOfDouble slowdown benchmark

2010-10-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/binary.bench: add improved random binary string bench

	* runbench.tcl: clean up arg handling, add -single $bool option to
	run all tests in same interp instance (default no == separate).

2010-09-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* normbench.tcl: support -normalize "none" to mean just change
	formats but not normalize

	* libbench.tcl (bench): guard again "0" claimed runtime speed
	(bench_tmpfile): add pid to tmpfile

	* tcl/binary.bench: bench to generate random binary

	* tcl/ascii85.bench (new): ascii85 benchmarks, works for 8.4+

	* tcl/uplevel.bench: works for 8.0+ only

	* tcl/expr.bench: more simple expr benchmarks

	* tcl/eval.bench (e-cmd-expand): add {*} benchmark

	* runbench.tcl, libbench.tcl: add -autoscale option that ensures
	min and max runtime length independent of iters requested.

	* tcl/read.bench (read-cat): make sure to close /dev/null

2010-09-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/string.bench: add binary string compare benchmarks

2010-09-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* runbench.tcl: require 8.3

2008-06-12  Miguel Sofer <msofer@users.sf.net>
